<resources>
    <string name="app_name">鑫城广场</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normalee">查看更多</string>
    <string name="netWork_error">网络链接异常！</string>
    <string name="netWork_warning">您的网速不给力啊！</string>
    <string name="login_login">会员登录</string>
    <string name="login_account">用户名</string>
    <string name="login_password">密 码</string>
    <string name="account_not_empty">账号不能为空</string>
    <string name="password_not_empty">账户密码不能为空</string>
    <string name="confirm_not_empty">请确认账户密码</string>
    <string name="i_am_the_last">没有更多消息</string>
    <string name="please_input_order_no">请输入搜索内容</string>
    <string name="no_more">没有更多消息</string>
    <string name="order">订单</string>
    <string name="my_order">我的订单</string>
    <string name="my_inventory">我的库存</string>
    <string name="my_supply">我的发布</string>
    <string name="industry_news">行业资讯</string>
    <string name="seek_title">求购信息</string>
    <string name="name">名称</string>
    <string name="standard">规格</string>
    <string name="price">价格</string>
    <string name="unit">单位</string>
    <string name="time">时间</string>
    <string name="login">登 录</string>
    <string name="is_new_push">行业资讯</string>
    <string name="push_setting">推送设置</string>
    <string name="about">关于</string>
    <string name="auto_login">自动登录</string>
    <string name="remember_pwd">记住密码</string>
    <string name="userNo">用户名</string>
    <string name="password">密码</string>
    <string name="login_title">登录</string>
    <string name="prompt">提示</string>
    <string name="please_wait">请稍后...</string>
    <string name="my_self">我的</string>
    <string name="more">更多</string>
    <string name="new_list_title">行业资讯</string>
    <string name="news_info_title">资讯详情</string>
    <string name="price_s">产品价格：</string>
    <string name="unit_s">产品单位：</string>
    <string name="standard_s">型号：</string>
    <string name="brand_s">品牌：</string>
    <string name="min_num">最小数量：</string>
    <string name="max_num">最大数量：</string>
    <string name="area">所在地区</string>
    <string name="time_s">有效期至：</string>
    <string name="goods_describe">问题描述</string>
    <string name="details">详情</string>
    <string name="pg_more_help_lb_copy_right_top">Copyright©2016-2018</string>
    <string name="pg_more_help_lb_copy_right_bottom">鑫城广场 http://xincheng.market  版权所有</string>
    <string name="pg_more_about_quick_mark_download">扫描二维码,关注我们的微信公共号</string>
    <string name="push_order">接收订单消息</string>
    <string name="push_new">接受行业资讯</string>
    <string name="notice">公告</string>
    <string name="check_update">检查更新</string>
    <string name="detail_no">订单编号：</string>
    <string name="create_time">创建时间：</string>
    <string name="pay_time">付款时间：</string>
    <string name="customer">买家昵称：</string>
    <string name="customer_msg">买家留言：</string>
    <string name="remark">卖家备忘：</string>
    <string name="order_status">订单状态：</string>
    <string name="pay_money">实付金额：</string>
    <string name="customer_name">收货人：</string>
    <string name="telephone">电话：</string>
    <string name="postcode">邮编：</string>
    <string name="address">收货地址：</string>
    <string name="logistics_detail">物流详情</string>
    <string name="send_msg">收货信息</string>
    <string name="send">发货</string>
    <string name="order_product">订单商品</string>
    <string name="total">共</string>
    <string name="piece">件，</string>
    <string name="send_option">发送货物</string>
    <string name="order_money">订单金额：</string>
    <string name="order_pay_type">支付类型：</string>
    <string name="order_create_time">创建时间：</string>
    <string name="order_pay_time">支付时间：</string>
    <string name="order_distribution_time">发货时间：</string>
    <string name="seller_info">买家详情</string>
    <string name="seller_name">买家姓名：</string>
    <string name="seller_phone">买家电话：</string>
    <string name="order_info_title">订单详情</string>
    <string name="hope_logistics">期望物流：</string>
    <string name="buyer_message">买家留言：</string>
    <string name="buyer_phone">买家电话：</string>
    <string name="buyer_name">买家姓名</string>
    <string name="send_success">发货成功</string>
    <string name="yoho_ok">有货确认</string>
    <string name="naked_cancel">无货取消</string>
    <string name="confirm_send">确认发货</string>
    <string name="push_notice">接收推送公告</string>
    <string name="supply_title">我的发布</string>
    <string name="supply_describe_title">发布详情</string>
    <string name="inventory_title">我的库存</string>
    <string name="notice_title">平台公告</string>
    <string name="announce_title">公告</string>
    <string name="send_supply">发布</string>
    <string name="product_name">产品名称</string>
    <string name="product_price">产品价格</string>
    <string name="product_inventory">库存</string>
    <string name="add_product">添加产品图片</string>
    <string name="all_photo">所有图片</string>
    <string name="select_photo_title">图片选择</string>
    <string name="preview">预览</string>
    <string name="max_select_five_photo">最多选择5张图片</string>
    <string name="no_select_photo">未选择图片</string>
    <string name="alert">提示</string>
    <string name="publish">发布</string>
    <string name="name_no_empty">名称不能为空</string>
    <string name="price_no_empty">价格不能为空</string>
    <string name="describe_no_empty">描述不能为空</string>
    <string name="please_select_photo">请至少选择一张图片</string>
    <string name="publish_success">发布成功</string>
    <string name="already_best_new_version">已是最新版本</string>
    <string name="update_prompt">更新提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="downloading">正在下载</string>
    <string name="runing_connection">正在连接</string>
    <string name="select_category">选择分类</string>
    <string name="please_select_category">请选择分类</string>
    <string name="notification_news_value">您有新的资讯信息</string>
    <string name="notification_ammounce_value">您有新的公告信息</string>
    <string name="notification_order_value">您有新的订单信息</string>
    <string name="message_validity">信息有效期</string>
    <string name="please_end_time">请选择结束日期</string>
    <string name="please_select_message_validity">请选择到期时间</string>
    <string name="announce_info_title">公告详情</string>
    <string name="member_name">会员姓名</string>
    <string name="member_email">邮箱</string>
    <string name="member_qq">QQ</string>
    <string name="member_mobile">手机号：</string>
    <string name="quit">退出登录</string>
    <string name="share">分享</string>
    <string name="un_add">未填写</string>
    <string name="product_num">产品数量</string>
    <string name="select_unit">选择产品单位</string>
    <string name="product_num_no_zero">产品数量不能为0</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="select_begin_time">请选择开始时间</string>
    <string name="please_select_supply_time">请选择供应时间</string>
    <string name="begin_time_no_greater_than_end_Time">结束时间应大于开始时间</string>
    <string name="shop_telPhone">商家电话：</string>
    <string name="please_account_name">请输入用户名</string>
    <string name="please_password">请输入密码</string>
    <string name="select_account_group">请选择用户组</string>
    <string name="register_success">注册成功，等待管理员审核</string>
    <string name="register_failed">注册失败</string>
    <string name="the_account_exist">该手机号已注册</string>
    <string name="no_account_register">没有账号? 立即注册</string>
    <string name="register">注册</string>
    <string name="please_select_account_group">请选择用户组</string>
    <string name="account_standard">用户名不合法，只能使用手机号</string>
    <string name="not_found_account">账号不存在，请先注册</string>
    <string name="password_error">密码不正确</string>
    <string name="not_audit">账号未审核或禁止登录</string>
    <string name="password_min_six">密码长度最少6位</string>
    <string name="send_check_code">发送验证码</string>
    <string name="please_input_telphone">请输入手机号</string>
    <string name="please_input_check_code">请输入验证码</string>
    <string name="pleaset_telPhone">请输入手机号</string>
    <string name="un_setting_send_sms">未设置发送短信功能</string>
    <string name="un_open_send_sms">未开启短信发送功能</string>
    <string name="send_frequently">该手机号发送太频繁，半小时再发</string>
    <string name="un_setting_send_sms_error">短信设置不正确</string>
    <string name="sms_balance_fund">短信余额不足</string>
    <string name="send_sms_failed">短信发送失败，请重新发送</string>
    <string name="check_code_send_success">验证码已发送，请注意查收</string>
    <string name="supply_num">求购量：</string>
    <string name="location">所在地：</string>
    <string name="upgrade_maintenance">升级维护中...请关注http://wyww.cn/公告信息</string>
    <string name="provide_title">供应信息</string>
    <string name="discuss">商议</string>
    <string name="wait_distribution">--：--：--</string>
    <string name="please_input_express_no">请输入物流单号</string>
    <string name="express_no_not_empty">快递单号不能为空</string>
    <string name="please_input_express_name">请输入物流公司名称</string>
    <string name="express_name_not_empty">物流名称不能为空</string>
    <string name="notification_order_create">您有一条新的订单~</string>
    <string name="notification_order_pay">您有一条订单买家已付款~</string>
    <string name="telPhone_contact">联系电话</string>
    <string name="goods_title">产品列表</string>
    <string name="add">新增</string>
    <string name="product_no">产品编号</string>
    <string name="please_select_product_category">请选择产品分类</string>
    <string name="product_describe">详细描述</string>
    <string name="product_image">产品图片</string>
    <string name="complete">完成</string>
    <string name="product_add">添加产品</string>
    <string name="num_no_empty">产品数量不能为空</string>
    <string name="no_no_empty">产品编号不能为空</string>
    <string name="please_select_categort">请选择分类</string>
    <string name="crop_canceled">裁剪取消</string>
    <string name="add_success">保存成功</string>
    <string name="add_failed">保存失败</string>
    <string name="net_error">网络连接错误...</string>
    <string name="parent_category">上一级</string>
    <string name="required">未填写</string>
    <string name="product_info_title">商品详情</string>
    <string name="update">修改</string>
    <string name="save">保存</string>
    <string name="image_group">图库</string>
    <string name="update_success">更新成功</string>
    <string name="current_mode">当前模式：</string>
    <string name="product_mnager">产品管理</string>
    <string name="message_manager">留言管理</string>
    <string name="article_manager">文章管理</string>
    <string name="article_name">文章标题</string>
    <string name="author">作者</string>
    <string name="content">内容</string>
    <string name="is_out_link">外部链接</string>
    <string name="please_select_article_category">请选择文章分类</string>
    <string name="article_add_title">添加文章</string>
    <string name="title_no_empty">标题不能为空</string>
    <string name="content_no_empty">内容不能为空</string>
    <string name="loading_error_again">重新加载</string>
    <string name="net_is_weak">网络连接异常</string>
    <string name="take_photo">拍照</string>
    <string name="from_photo_select">从相册选择</string>
    <string name="password_again">确认密码</string>
    <string name="please_address_name">请输入收件人姓名</string>
    <string name="please_address_telphone">请输入联系电话</string>
    <string name="please_address_address">请输入详细地址</string>
    <string name="is_default_address">默认收货地址</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="please_select_express_model_title">选择配送方式</string>
    <string name="dispatch_logistics">物流公司配送</string>
    <string name="manual_input">手动输入</string>
    <string name="dispatch_my_self">自主配送</string>
    <string name="dispatch_person">派单员派送</string>
    <string name="express_company">物流公司</string>
    <string name="dispatch_persion_price">派送佣金</string>
    <string name="please_input_dispatch_persion_price">请输入派送佣金</string>
    <string name="please_select_logistic_company">请选择物流公司</string>
</resources>