<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">
	<include layout="@layout/title"/>
	<ScrollView android:layout_width="match_parent"
				android:layout_height="match_parent">
		<LinearLayout android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:orientation="vertical">
			<ImageView
					android:id="@+id/iv_login_head_icon"
					android:layout_width="200dp"
					android:layout_height="100dp"
					android:src="@drawable/company_logo"
					android:layout_margin="20dp"
					android:paddingTop="3dp"
					android:paddingRight="3dp"
					android:paddingLeft="3dp"
					android:layout_gravity="center"
					android:paddingBottom="5dp"/>
			<com.banksoft.XinChengShop.widget.ClearEditText
					android:id="@id/account"
					android:layout_width="fill_parent"
					android:layout_height="40dp"
					android:layout_margin="10dp"
					android:background="@drawable/edit_text_bg"
					android:gravity="center_vertical"
					android:paddingLeft="10.0dp"
					android:singleLine="true"
					android:hint="@string/userNo"/>
			<com.banksoft.XinChengShop.widget.ClearEditText
					android:id="@id/password"
					android:layout_width="fill_parent"
					android:layout_height="40dp"
					android:layout_margin="10dp"
					android:background="@drawable/edit_text_bg"
					android:gravity="center_vertical"
					android:paddingLeft="10.0dp"
					android:singleLine="true"
					android:password="true"
					android:hint="@string/password"/>

			<com.banksoft.XinChengShop.widget.ClearEditText
					android:id="@id/password_again"
					android:layout_width="fill_parent"
					android:layout_height="40dp"
					android:layout_margin="10dp"
					android:background="@drawable/edit_text_bg"
					android:gravity="center_vertical"
					android:paddingLeft="10.0dp"
					android:singleLine="true"
					android:password="true"
					android:hint="@string/password_again"/>
			<com.banksoft.XinChengShop.widget.ClearEditText
					android:id="@id/member_email"
					android:layout_width="fill_parent"
					android:layout_height="40dp"
					android:layout_margin="10dp"
					android:background="@drawable/edit_text_bg"
					android:gravity="center_vertical"
					android:paddingLeft="10.0dp"
					android:singleLine="true"
					android:hint="@string/member_email"/>

			<LinearLayout android:layout_width="match_parent"
						  android:layout_height="@dimen/height_50"
					      android:orientation="horizontal">


				<com.banksoft.XinChengShop.widget.ClearEditText
						android:id="@id/check_code"
						android:layout_width="fill_parent"
						android:layout_height="40dp"
						android:layout_margin="10dp"
						android:background="@drawable/edit_text_bg"
						android:gravity="center_vertical"
						android:paddingLeft="10.0dp"
						android:singleLine="true"
						android:layout_weight="1"
						android:visibility="gone"
						android:hint="@string/please_input_check_code"/>
				<com.banksoft.XinChengShop.widget.ClearEditText
						android:id="@id/telPhone"
						android:layout_width="fill_parent"
						android:layout_height="40dp"
						android:layout_margin="10dp"
						android:background="@drawable/edit_text_bg"
						android:gravity="center_vertical"
						android:paddingLeft="10.0dp"
						android:singleLine="true"
						android:layout_weight="1"
						android:hint="@string/please_input_telphone"/>
				<Button android:id="@id/send_check_code"
						android:layout_width="100.0dp"
						android:layout_height="@dimen/height_40"
						android:layout_marginLeft="10.0dp"
						android:layout_marginRight="10.0dp"
						android:background="@drawable/red_radus_bg"
						android:textColor="@color/text_white"
						android:text="@string/send_check_code"
						android:textSize="@dimen/text_size_4"
						android:layout_marginTop="10.0dp"/>
			</LinearLayout>
			<Button android:id="@id/register"
					android:layout_width="match_parent"
					android:layout_height="@dimen/height_50"
					android:layout_marginLeft="10.0dp"
					android:layout_marginRight="10.0dp"
					android:background="@drawable/click_red_button"
					android:textColor="@color/text_white"
					android:text="@string/register"
					android:textSize="@dimen/text_size_3"
					android:layout_marginTop="20.0dp"/>
		</LinearLayout>
	</ScrollView>



</LinearLayout>