<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/body_bg">
    <include layout="@layout/title"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">
            <TextView android:layout_width="match_parent"
                      android:layout_height="@dimen/height_50"
                      style="@style/text_style_3"
                      android:text="@string/please_select_express_model_title"
                      android:paddingLeft="10.0dp"/>
            <RadioGroup android:id="@id/express_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10.0dp">
                <RadioButton
                        android:id="@id/dispatch_logistics"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:background="@drawable/button_white_bg"
                        android:drawableRight="@android:drawable/btn_radio"
                        android:text="@string/dispatch_logistics"
                        android:checked="true"
                        style="@style/text_style_3"
                        android:paddingLeft="10.0dp"/>
                <RadioButton
                        android:id="@id/dispatch_manual"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:background="@drawable/button_white_bg"
                        android:drawableRight="@android:drawable/btn_radio"
                        android:text="@string/manual_input"
                        style="@style/text_style_3"
                        android:paddingLeft="10.0dp"/>
                <RadioButton
                        android:id="@id/dispatch_my_self"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:background="@drawable/button_white_bg"
                        android:drawableRight="@android:drawable/btn_radio"
                        android:text="@string/dispatch_my_self"
                        style="@style/text_style_3"
                        android:paddingLeft="10.0dp"/>
                <RadioButton
                        android:id="@id/dispatch_person"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:background="@drawable/button_white_bg"
                        android:drawableRight="@android:drawable/btn_radio"
                        android:text="@string/dispatch_person"
                        style="@style/text_style_3"
                        android:paddingLeft="10.0dp"/>
            </RadioGroup>

            <LinearLayout android:id="@id/dispatch_manual_layout"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:padding="10.0dp"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="@dimen/height_50"
                          style="@style/text_style_3"
                          android:text="@string/express_company"/>
                <LinearLayout
                            android:id="@id/dispatch_select_layout"
                             android:layout_width="match_parent"
                              android:layout_height="@dimen/height_50"
                              android:background="@drawable/button_white_bg"
                              android:gravity="center_vertical"
                              android:orientation="horizontal">
                    <TextView android:id="@id/express_name"
                              android:layout_width="match_parent"
                              android:layout_height="@dimen/height_50"
                              android:text="@string/please_select_logistic_company"
                              style="@style/text_style_3"
                              android:layout_weight="1"
                              android:paddingLeft="10.0dp"/>
                    <ImageView android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@drawable/settings_arrow"/>
                </LinearLayout>
                <EditText android:id="@id/express_edit"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/height_50"
                          android:hint="@string/please_input_express_name"
                          android:visibility="gone"
                          style="@style/text_style_3"
                          android:paddingLeft="10.0dp"
                          android:background="@drawable/edit_text_white_bg"/>
                <View style="@style/line1"/>
                <EditText android:id="@id/express_no"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/height_50"
                          android:hint="@string/please_input_express_no"
                          style="@style/text_style_3"
                          android:paddingLeft="10.0dp"
                          android:background="@drawable/edit_text_white_bg"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@id/dispatch_person_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="10.0dp"
                    android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:layout_height="@dimen/height_50"
                          style="@style/text_style_3"
                          android:text="@string/dispatch_persion_price"/>

                <EditText android:id="@id/dispatch_persion_price"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/height_50"
                          android:hint="@string/please_input_dispatch_persion_price"
                          style="@style/text_style_3"
                          android:paddingLeft="10.0dp"
                          android:inputType="numberSigned"
                          android:background="@drawable/edit_text_white_bg"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@id/send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            style="@style/text_style_3"
            android:text="@string/send"
            android:textColor="@color/text_white"
            android:gravity="center"
            android:background="@drawable/click_red_button"/>

</LinearLayout>