<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/title"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/text_white"
                  android:orientation="vertical">
        <com.banksoft.XinChengShop.widget.ClearEditText android:id="@id/name"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="@dimen/height_50"
                                                        android:background="@drawable/edit_text_bg"
                                                        android:hint="@string/please_address_name"
                                                        android:layout_margin="10.0dp"/>
        <com.banksoft.XinChengShop.widget.ClearEditText android:id="@id/telPhone"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="@dimen/height_50"
                                                        android:background="@drawable/edit_text_bg"
                                                        android:hint="@string/please_address_telphone"
                                                        android:layout_margin="10.0dp"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/height_50"
                      android:background="@color/text_white"
                      android:layout_margin="10.0dp"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:textColor="@color/text_black_light"
                      android:textSize="17.0sp"
                      android:gravity="center"
                      android:text="@string/is_default_address"/>
            <RadioGroup
                    android:id="@id/is_default_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                <CheckBox android:id="@id/yes"
                          android:layout_width="20.0dp"
                          android:layout_height="20.dp"
                          android:text="@string/yes"
                          style="@style/RadioButtonStyle"/>
                <CheckBox android:id="@id/no"
                         android:layout_width="20.0dp"
                          android:layout_height="20.0dp"
                          android:layout_marginLeft="40.0dp"
                          android:checked="true"
                          android:text="@string/no"
                          style="@style/RadioButtonStyle"/>
            </RadioGroup>
        </LinearLayout>
        <com.banksoft.XinChengShop.widget.ClearEditText android:id="@id/address"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="@dimen/height_50"
                                                        android:background="@drawable/edit_text_bg"
                                                        android:hint="@string/please_address_address"
                                                        android:layout_margin="10.0dp"/>


        <Button android:id="@id/ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:background="@drawable/red_radus_bg"
                android:text="@string/save"
                android:textColor="@color/text_white"
                style="@style/text_style_2"
                android:gravity="center"
                android:layout_margin="10.0dp"/>

    </LinearLayout>
</LinearLayout>