<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/title"/>
    <EditText android:id="@id/telPhone"
              android:layout_width="match_parent"
              android:layout_height="@dimen/height_50"
              android:background="@drawable/edit_gray_bg"
              android:singleLine="true"
              android:editable="false"
              android:layout_margin="10.0dp"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/height_50"
                  android:layout_marginLeft="10.0dp"
                  android:layout_marginRight="10.0dp"
                  android:orientation="horizontal">
        <EditText android:id="@id/check_code"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:hint="@string/please_input_check_code"
                  android:paddingLeft="10.0dp"
                  android:background="@drawable/edit_gray_bg"
                  android:singleLine="true"
                  android:layout_weight="1"/>
        <Button android:id="@id/send_check_code"
                android:layout_width="@dimen/height_100"
                android:layout_height="match_parent"
                android:background="@drawable/click_red_button"
                android:layout_marginLeft="10.0dp"
                android:layout_margin="5.0dp"
                android:textColor="@color/text_white"
                android:text="@string/send_check_code"/>
    </LinearLayout>
    <EditText android:id="@id/password"
              android:layout_width="match_parent"
              android:layout_height="@dimen/height_50"
              android:background="@drawable/edit_gray_bg"
              android:singleLine="true"
              android:hint="@string/please_password"
              android:password="true"
              android:paddingLeft="10.0dp"
              android:layout_margin="10.0dp"/>
    <EditText android:id="@id/password_again"
              android:layout_width="match_parent"
              android:layout_height="@dimen/height_50"
              android:background="@drawable/edit_gray_bg"
              android:layout_marginLeft="10.0dp"
              android:hint="@string/password_again"
              android:paddingLeft="10.0dp"
              android:password="true"
              android:layout_marginRight="10.0dp"
              android:singleLine="true"/>

    <Button android:id="@id/ok"
            android:layout_width="@dimen/height_200"
            android:layout_height="@dimen/height_50"
            android:background="@drawable/click_red_button"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_white"
            android:text="@string/ok"
            android:layout_marginTop="10.0dp"/>
</LinearLayout>